--- a/css/main.css
+++ b/css/main.css
@@ -1677,7 +1677,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #fb6;
+  background: #b84b8e;
 }
 .links-of-blogroll {
   font-size: 13px;
